# Alchemist.nvim

./: .gitignore  LICENSE  README.md  pyproject.toml
alchemist/: __init__.py
alchemist/protocol/: __init__.py  correlation.py  dispatcher.py  errors.py  framing.py  ids.py  jsonrpc.py  registry.py
alchemist/protocol/models/: client_to_daemon.py  common.py  daemon_to_client.py  results.py
docs/: Roadmap.md  Specifications.md
docs/plan/: Phase1.md
tests/protocol/: test_correlation.py  test_dispatcher.py  test_fake_client_server.py  test_framing.py  test_jsonrpc_envelopes.py  test_method_models.py  test_redaction.py
