[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alchemist-daemon"
version = "0.1.0"
description = "Embedded Python daemon for Alchemist.nvim"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["alchemist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
